# authorization_service

./: .env.docker.test  Dockerfile  README.md  conftest.py  docker-compose.yml  pyproject.toml
authorization_service/: apps.py  models.py  pagination.py  permissions.py  serializers.py  test_my.py  tests.py  urls.py  utils.py  validators.py  views.py
authorization_service/migrations/: 0001_initial.py  0002_initial.py  0003_alter_userprofile_activated_referral_code.py
config/: settings.py  urls.py
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
